feat: Implement JWT authentication for API security
- Add user registration and login endpoints (/api/auth/register, /api/auth/login)
- Implement JWT Bearer token authentication with configurable expiration
- Add User entity with secure password hashing using BCrypt (workfactor 12)
- Protect SearchController and UploadController with [Authorize] attributes
- Add JwtAuthenticationService for token generation and password verification
- Configure JWT validation in Program.cs with signature, issuer, and audience validation
- Create database migration for Users table with unique constraints
- Add ErrorResponse model for standardized error handling
- Update Swagger/OpenAPI to support Bearer token authentication
- Add comprehensive authentication examples to NftApi.http
- Update README.md with JWT authentication workflow and examples
- Add NuGet packages: Microsoft.AspNetCore.Authentication.JwtBearer, System.IdentityModel.Tokens.Jwt, BCrypt.Net-Next
- All 8 unit tests passing with no breaking changes
- Production-ready security implementation

--- a/NftApi/appsettings.json
+++ b/NftApi/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=SAMJID\\SQLEXPRESS;Database=NftApiDb;Trusted_Connection=true;TrustServerCertificate=true;MultipleActiveResultSets=true"
   },
+  "Jwt": {
+    "SecretKey": "your-super-secret-key-change-this-in-production-min-32-characters",
+    "Issuer": "NftApi",
+    "Audience": "NftApiUsers",
+    "ExpirationMinutes": 60
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
